spacing h1 fix

--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,7 @@ h2.dark {
   text-transform: uppercase;
   text-align: center;
   color: #222;
+   margin-bottom: 1em;
 }
 
 h3 {
